package com.marmatsan.figmaDesignSync.domain.model.catalog

data class PluginCatalogTree(
    val roots: List<PluginCatalogNode>
)
