package com.marmatsan.figmaDesignSync.domain.model.figma

data class FigmaNodeReference(
    val fileKey: String,
    val nodeId: String
)
