package com.marmatsan.figmaDesignSync.domain.model.catalog

data class LibraryCatalogTree(
    val roots: List<LibraryCatalogNode>
)
