@startuml figma-design-sync-domain-model
!include ../../../../../docs/uml/includes/theme.puml
!include ../../../../../docs/uml/includes/stereotypes.puml

title figmaDesignSync domain model

skinparam classAttributeIconSize 0
skinparam nodesep 80
skinparam ranksep 90

package "catalog" {
  class CatalogVersion <<domain>> {
    +value: String?
    +visible: Boolean
  }

  class LibraryCatalogTree <<domain>> {
    +roots: List<LibraryCatalogNode>
  }

  class LibraryCatalogNode <<domain>> {
    +group: String
    +entries: List<LibraryCatalogEntry>
    +artifactsVisible: Boolean
    +children: List<LibraryCatalogNode>
  }

  interface LibraryCatalogEntry <<domain>>

  class "LibraryCatalogEntry.Artifact" as LibraryCatalogArtifact <<domain>> {
    +artifact: String
    +version: CatalogVersion
    +requiredByModules: List<String>
  }

  class "LibraryCatalogEntry.ArtifactsBundle" as LibraryCatalogArtifactsBundle <<domain>> {
    +alias: String
    +artifacts: List<String>
    +version: CatalogVersion
    +requiredByModules: List<String>
  }

  class PluginCatalogTree <<domain>> {
    +roots: List<PluginCatalogNode>
  }

  class PluginCatalogNode <<domain>> {
    +id: String
    +version: CatalogVersion?
    +appliedToModules: List<String>
    +children: List<PluginCatalogNode>
  }
}

package "modules" {
  class ModuleDependency <<domain>> {
    +dependentModule: String
    +dependencyModule: String
    +compareTo(other: ModuleDependency): Int
    +render(): String
  }
}

package "versions" {
  class RepositoryVersionSection <<domain>> {
    +name: String
    +versions: Map<String, String>
  }
}

package "figma" {
  class FigmaNodeReference <<domain>> {
    +fileKey: String
    +nodeId: String
  }
}

LibraryCatalogTree "1" *-- "0..*" LibraryCatalogNode : roots
LibraryCatalogNode "1" *-- "0..*" LibraryCatalogEntry : entries
LibraryCatalogNode "1" *-- "0..*" LibraryCatalogNode : children
LibraryCatalogEntry <|.. LibraryCatalogArtifact
LibraryCatalogEntry <|.. LibraryCatalogArtifactsBundle
LibraryCatalogArtifact --> CatalogVersion : version
LibraryCatalogArtifactsBundle --> CatalogVersion : version

PluginCatalogTree "1" *-- "0..*" PluginCatalogNode : roots
PluginCatalogNode "1" *-- "0..*" PluginCatalogNode : children
PluginCatalogNode --> CatalogVersion : version

note right of CatalogVersion
visible can only be true when
value is present.
end note

note bottom of ModuleDependency
Natural order is dependentModule,
then dependencyModule.
end note

@enduml
